# Gametrack

./: .gitignore  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  db.py  library.py  schema.sql  steam.py  vndb.py
flaskr/static/: script.js  style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
gametrack/: __init__.py  auth.py  db.py  library.py  schema.sql  steam.py
gametrack/static/: script.js  style.css
gametrack/templates/: base.html  index.html
gametrack/templates/auth/: login.html  register.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_library.py  test_steam.py
