[project]
name = "gametrack"
version = "1.0.0"
description = "A web app to track played games."
dependencies = [
    "flask", "click", "requests","zstandard", "pandas", "rich"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]